--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -12,7 +12,7 @@
 		{% endfor %}
 	</p>
 	<p>
-		{{ form.abour_me.label }}<br>
+		{{ form.about_me.label }}<br>
 		{{ form.about_me(cols=50, rows=4) }}<br>
 		{% for error in form.about_me.errors %}
 		<span style="color: red;">[{{ error }}]</span>
